# boilerplatePYweb

./: .gitignore  README.md  pyproject.toml
database/: create_db.py
pyweb/: main.py  main_no_db.py  test.py
restfulweb/: __init__.py  main.py  main_no_db.py
restfulweb/templates/: base.html  index.html  metadata.html
tests/: test_flask.py
web/: main.py
web/templates/: index.html  insert.html  update.html
